Update index.html to have Print button (unstyled)

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <div class="total-card">
       <h2 id="grandTotal">Grand Total: ₦0</h2>
     </div>
+    <button class="print-btn" onclick="window.print()">Print Quotation</button>
 
   </div>
 
