--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-  <div class="app-container">
+  <main class="app-container">
 
     <header class="app-header">
+      <div class="logo-icon">
+        <i class="ph ph-receipt"></i>
+      </div>
       <h1 id="quotationTitle">Quotation</h1>
       <p>Create clean, professional quotations in seconds</p>
     </header>
@@ -88,7 +92,9 @@
         </div>
       </div>
 
-      <button class="primary-btn" onclick="addArea()">➕ Add Area</button>
+      <button class="primary-btn" onclick="addArea()">
+        <i class="ph ph-plus-circle" style="font-size: 20px; color: white;"></i> Add Area
+      </button>
 
     </section>
 
@@ -97,9 +103,11 @@
     <div class="total-card">
       <h2 id="grandTotal">Grand Total: ₦0</h2>
     </div>
-    <button class="print-btn" onclick="window.print()">Print Quotation</button>
+    <button class="print-btn" onclick="window.print()">
+      <i class="ph ph-printer"></i> Print Quotation
+    </button>
 
-  </div>
+  </main>
 
   <script src="script.js"></script>
 </body>
