refactor: split js modules

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       </div>
 
-      <button class="primary-btn" onclick="addArea()">
+      <button class="primary-btn" id="addAreaBtn" type="button">
         <i class="ph ph-plus-circle" style="font-size: 20px; color: white;"></i> Add Area
       </button>
 
@@ -103,12 +103,12 @@
     <div class="total-card">
       <h2 id="grandTotal">Grand Total: ₦0</h2>
     </div>
-    <button class="print-btn" onclick="window.print()">
+    <button class="print-btn" id="printBtn" type="button">
       <i class="ph ph-printer"></i> Print Quotation
     </button>
 
   </main>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
