feat: add local save

--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
       <i class="ph ph-printer"></i> Print Quotation
     </button>
 
+    <section class="glass history-section">
+      <div class="history-header">
+        <div>
+          <h2>Saved Quotations</h2>
+          <p class="history-subtitle">Store and restore quotations on this device</p>
+        </div>
+        <button class="primary-btn history-save-btn" id="saveQuoteBtn" type="button">
+          <i class="ph ph-bookmark-simple"></i> Save Quotation
+        </button>
+      </div>
+      <ul id="historyList" class="history-list"></ul>
+    </section>
+
   </main>
 
   <script type="module" src="script.js"></script>
