--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <div class="logo-icon">
         <i class="ph ph-receipt"></i>
       </div>
+      <button class="icon-btn" id="historyToggleBtn" type="button" aria-label="Open history">
+        <i class="ph ph-list"></i>
+      </button>
       <h1 id="quotationTitle">Quotation</h1>
       <p>Create clean, professional quotations in seconds</p>
     </header>
@@ -107,20 +110,22 @@
       <i class="ph ph-printer"></i> Print Quotation
     </button>
 
-    <section class="glass history-section">
-      <div class="history-header">
-        <div>
-          <h2>Saved Quotations</h2>
-          <p class="history-subtitle">Store and restore quotations on this device</p>
-        </div>
-        <button class="primary-btn history-save-btn" id="saveQuoteBtn" type="button">
-          <i class="ph ph-bookmark-simple"></i> Save Quotation
-        </button>
-      </div>
-      <ul id="historyList" class="history-list"></ul>
-    </section>
-
   </main>
+
+  <div class="sheet-overlay" id="historyOverlay" aria-hidden="true"></div>
+  <section class="history-sheet" id="historySheet" aria-hidden="true">
+    <div class="sheet-handle" id="historyHandle" aria-hidden="true"></div>
+    <div class="history-header">
+      <div>
+        <h2>Saved Quotations</h2>
+        <p class="history-subtitle">Store and restore quotations on this device</p>
+      </div>
+      <button class="primary-btn history-save-btn" id="saveQuoteBtn" type="button">
+        <i class="ph ph-bookmark-simple"></i> Save Quotation
+      </button>
+    </div>
+    <ul id="historyList" class="history-list"></ul>
+  </section>
 
   <script type="module" src="script.js"></script>
 </body>
