feat: add editable pre-create line items

--- a/index.html
+++ b/index.html
@@ -203,6 +203,21 @@
         </div>
       </div>
 
+      <div id="lineEditorSection" class="guided-only line-editor is-hidden">
+        <div class="line-editor-header">
+          <h3>Editable Line Items</h3>
+          <p>Edit quantity and unit price before adding item.</p>
+        </div>
+        <p id="lineEditorEmpty" class="line-editor-empty">
+          Fill inputs above to preview editable items.
+        </p>
+        <div id="lineEditorBody" class="line-editor-body"></div>
+        <div class="line-editor-total">
+          <span>Preview Total</span>
+          <strong id="lineEditorTotal">₦0</strong>
+        </div>
+      </div>
+
       <button class="primary-btn" id="addAreaBtn" type="button">
         <i class="ph ph-plus-circle" style="font-size: 20px; color: white;"></i> Add Item
       </button>
